# MPILab1

./: .gitignore  README.md
task1/: main.c  monte_carlo_pi  performance_analysis  performance_analysis.c  performance_results.txt  plot_results.py  run_tests.sh
task2/: CMakeLists.txt  block.cpp  col.cpp  mpilab.cpp  mpilab.hpp  plot_results.py  row.cpp  run.sh
task2/results/: benchmark_results.csv  benchmark_results_final.csv
task3/: main.c  run_benchmark.sh
task3/results/: benchmark_results_final.csv
task4/: derihlet  main.c  plot_results.py  run.sh  times.txt
